filer/private/sass/components/_navigator.scss
//##############################################################################
// NAVIGATOR

.filebrowser .navigator-table {
    // required for django CMS <= 3.1 #673
    width: 100%;
    margin: 0;
    border-top: solid 1px $gray-lighter !important;
    border-collapse: collapse !important;
    thead th,
    tbody td {
        text-align: left;
        vertical-align: middle;
        padding: 5px !important;
        border-left: 0 !important;
        border-bottom: 1px solid $gray-lighter;
        border-top: 1px solid transparent;
        background: none !important;
    }
    tbody tr.selected {
        .icon {
            color: $gray-darkest !important;
            background-color: white;
        }
    }
    .unfiled td {
        padding: 12px 5px !important;
        background-color: $gray-table !important;
        a,
        a:hover {
            color: $gray !important;
        }
    }
    .column-checkbox {
        text-align: center;
        width: 20px;
        padding-left: 20px !important;
        input {
            // makes sure that checkbox is vertical aligned #664
            vertical-align: middle;
            margin: 0;
        }
    }
    .column-icon {
        width: 25px;
        // removes padding to make sure that column has correct height #664
        padding-top: 0 !important;
        padding-bottom: 0 !important;
        img {
            width: 25px;
            height: auto;
        }
    }
    .column-action {
        text-align: center;
        white-space: nowrap;
        width: 70px;
        padding-right: 20px !important;
        a {
            font-size: 16px !important;
            margin: 0;
        }
        .icon {
            color: $gray-darkest;
            line-height: 33px;
            text-align: center;
            width: 33px;
            height: 33px;
            border: solid 1px #ccc;
            border-radius: 2px;
            &:hover {
                border-color: $color-primary;
            }
        }
    }
    .no-files {
        color: $gray;
        font-size: $font-size-normal;
        text-align: center;
        padding: 40px 0 !important;
        background-color: $gray-lightest !important;
        span {
            font-size: 20px;
            margin-right: 10px;
            &:before {
                vertical-align: sub;
            }
        }
    }
    .dz-drag-hover,
    &.dz-drag-hover {
        td {
            background: $hover-bg !important;
            border-top: solid 1px $color-primary !important;
            border-bottom: solid 1px $color-primary !important;
            box-sizing: border-box !important;
            a {
                color: $color-primary !important;
            }
        }
    }
    .remove-border td {
        border-bottom: solid 1px $color-primary !important;
    }
    &.reset-hover thead td {
        border-bottom: solid 1px $color-primary !important;
    }
    .reset-hover {
        td {
            background-color: $white !important;
            border-top: solid 1px $gray-lighter !important;
            border-bottom: solid 1px $color-primary !important;
        }
    }
}
.navigator-top-nav {
    position: relative;
    clear: both;
    min-height: 60px;
    padding: 3px 0;
    background: $gray-table;
    .breadcrumbs-container {
        float: left;
        width: 20%;
        @media screen and (max-width: $screen-tablet) {
            width: auto;
            margin-right: 20px;
        }
    }
    .tools-container {
        float: left;
        width: 80%;
        @media screen and (max-width: $screen-tablet) {
            width: 100%;
        }
    }
    .nav-button {
        display: inline-block;
        color: $btn-default-color;
        font-size: 22px;
        line-height: 34px;
        vertical-align: top;
        margin: 0 10px;
        span {
            vertical-align: middle;
        }
    }
    .nav-button-filter {
        position: relative;
        top: -1px;
    }
    .nav-button-dots {
        margin: 0;
        padding: 0 15px;
    }
    .separator {
        display: inline-block;
        position: relative;
        vertical-align: top;
        width: 1px;
        height: 34px;
        margin: 0 5px;
        &:before {
            content: "";
            display: block;
            position: absolute;
            top: -14px;
            bottom: -11px;
            overflow: hidden;
            width: 1px;
            background-color: #ccc;
        }
    }
}
.navigator-tools {
    @include clearfix;
    float: right;
    margin: 10px 10px 0 0;
    .actions-wrapper {
        float: right;
        margin-bottom: 10px;
        @media screen and (max-width: $screen-tablet) {
            @include clearfix();
            float: none;
            margin-left: 2px;
        }
    }
    .actions {
        display: none;
        float: right;
        @media screen and (max-width: $screen-tablet) {
            @include clearfix();
            float: none;
            margin-bottom: 10px;
        }
        .all,
        .question,
        .clear,
        .action-counter {
            font-size: $font-size-small;
            line-height: 34px;
            vertical-align: text-top;
        }
        .action-counter,
        .all {
            color: $gray-light;
        }
        .question,
        .clear {
            margin-left: 10px;
            padding-left: 10px;
            border-left: solid 1px $gray-lighter;
        }
        &.action-selected {
            display: block;
            margin-bottom: 10px;
            margin-left: 20px;
            @media screen and (max-width: $screen-tablet) {
                margin-left: 0;
            }
            @media screen and (min-width: $screen-tablet) {
                margin-bottom: 0;
            }
        }
    }
    .dropdown-container {
        @media screen and (max-width: $screen-tablet) {
            float: left;
        }
    }
}
@media screen and (max-width: $screen-tablet) {
    .navigator-top-nav {
        .breadcrumbs-container {
            float: none;
        }
        .navigator-tools {
            float: none;
            margin-left: 17px;
            .separator:before {
                top: 0;
                bottom: 0;
            }
        }
        .dropdown-container .dropdown-menu {
            right: auto;
            left: -130px;
        }
    }
}
// make sure that buttons break to new line on mobile view #677
.navigator-button-wrapper {
    text-align: right;
    margin-bottom: 10px;
    @media screen and (max-width: $screen-tablet) {
        display: block;
        text-align: left;
        margin-top: 10px;
    }
    @media screen and (min-width: $screen-desktop) {
        float: right;
        margin-left: 10px;
    }
}
.navigator-button {
    margin-right: 10px;
    &,
    &:visited,
    &:link:visited,
    &:link {
        @include button-variant($btn-action-color, $btn-action-bgcolor, $btn-action-border, true);
        display: inline-block;
        vertical-align: top;
        padding: 10px 20px !important;
    }
    .icon {
        position: relative;
        margin-right: 5px;
    }
    .fa-folder {
        top: 0;
    }
}

.upload-button-disabled {
    display: inline-block;
}
.navigator-button + .dropdown-menu {
    margin-top: -2px;
}

.navigator {
    position: relative;
    overflow-x: auto;
    width: 100%;
    form {
        margin: 0;
        padding: 0;
        box-shadow: none;
    }
}

.navigator-breadcrumbs {
    @include clearfix;
    position: relative;
    font-size: 16px;
    font-weight: bold;
    white-space: nowrap;
    padding: 18px 0 0 20px;
    .navigator-breadcrumbs-folder-name {
        display: inline-block;
        overflow: hidden;
        font-size: 16px;
        vertical-align: top;
        white-space: nowrap;
        text-overflow: ellipsis;
        max-width: calc(100% - 100px);
    }
    > a {
        color: $gray-darkest !important;
    }
    .icon {
        color: $gray-light;
        margin: 0 5px;
    }
    li {
        list-style-type: none;
    }
}
.navigator-breadcrumbs-dropdown-container {
    position: relative;
    top: -5px;
    float: left;
    margin: 0 7px 0 0;
    .navigator-breadcrumbs-dropdown {
        left: -15px;
        min-width: 200px;
        padding: 0;
        margin-top: 0;
        border: 0;
        box-shadow: $dropdown-shadow;
        > li {
            padding: 0;
            > a {
                color: $color-primary;
                padding: 12px 20px 3px;
                border-bottom: solid 1px #e1e1e1;
            }
            &:last-child > a {
                border-bottom: none;
            }
        }
        img {
            position: relative;
            top: -5px;
            vertical-align: top;
            margin: 0 10px 0 0;
        }
    }
}

.dropdown-container {
    display: inline-block;
    position: relative;
    vertical-align: top;
    .dropdown-menu {
        display: none;
        right: 0;
        left: auto;
        padding: 0;
        border: 0;
        box-shadow: $dropdown-shadow;
        > li > a {
            padding: 12px 20px;
        }
        label {
            display: block;
            line-height: 20px !important;
            white-space: nowrap;
            text-transform: none;
            margin: 5px 0 !important;
            padding: 0 10px !important;
        }
        input {
            position: relative;
            top: 4px;
            vertical-align: top;
            margin-right: 5px;
        }
        &.dropdown-menu-checkboxes {
            right: -85px;
            left: auto;
            height: 80px;
            padding: 15px;
            border: 0;
            box-shadow: $dropdown-shadow;
            @media screen and (min-width: $screen-tablet) {
                right: 0;
                width: 334px;
            }
            .fa-close {
                position: absolute;
                top: 10px;
                right: 10px;
                color: $gray-darker;
                cursor: pointer;
            }
            p {
                color: $gray-light !important;
                text-transform: uppercase;
                margin-bottom: 5px;
            }
            label {
                color: $gray !important;
                padding: 0 !important;
                margin-top: 0 !important;
            }
        }
        a:hover {
            background: $gray-lightest !important;
            border-radius: 4px;
        }
    }
    &.open .dropdown-menu {
        display: block;
        li {
            margin: 0;
            padding: 0;
            list-style-type: none;
        }
    }
    + .separator {
        margin-right: 10px;
    }
}
.dropdown-container-down {
    top: -5px;
    > a {
        &,
        &:link,
        &:visited,
        &:link:visited {
            color: $gray-light;
            font-size: 20px;
            line-height: 30px;
            height: 30px;
            padding: 0 10px;
        }
    }
    .dropdown-menu {
        right: auto;
        left: -14px;
        margin-right: 10px;
    }
}

.navigator-dropdown-arrow-up {
    position: relative;
    left: 20px;
    overflow: hidden;
    width: 20px;
    height: 20px;
    margin-top: -20px;
    z-index: 1001;
    &:after {
        content: "";
        position: absolute;
        top: 15px;
        left: 5px;
        width: 10px;
        height: 10px;
        background: white;
        transform: rotate(45deg);
        box-shadow: $dropdown-shadow;
    }
}

